# Linear-Optimization-Diet

./: .gitignore  Diet_Solver_Library.py  Linear Optimization.ipynb  Linear Optimization.py  README.md  athlete_manager.py  athletes.json  requirements.txt  todo.txt
lib/: Athlete.py  Food.py  Linear Optimization.py  pyproject.toml
lib/test_files/: make_athlete.py  sample_athlete.json
